...
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="NsQ-wo-Rw0"/>
                                                        <constraint firstAttribute="width" constant="44" id="SON-bi-cMg"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="tNI-WN-p7l" eventType="touchUpInside" id="20h-ox-ncf"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bi-wJ-uj3" userLabel="Date">
                                                    <rect key="frame" x="24" y="190" width="101.5" height="16"/>
...
                                    <constraint firstAttribute="width" constant="60" id="m5k-Jp-q7w"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nj2-uB-h75">
                                <rect key="frame" x="16" y="758" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="thG-IA-uoK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                            </wkWebView>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XRl-0l-Vaf">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="4"/>
                                <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="qES-Bz-t6h"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
...
                                </subviews>
                                <viewLayoutGuide key="contentLayoutGuide" id="kuV-Pn-uKq"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="zbe-4Y-5YC"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OUe-eb-lGe" userLabel="BackButton">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="back_button_white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="H6j-OU-uqJ"/>
                                    <constraint firstAttribute="height" constant="48" id="uG8-Ax-bzR"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_button_white"/>
...
